style(promptrunner): adjust textarea and height styles for better UI experience - Set max-width of textarea to 36em to prevent it from taking up too much space - Reduce minRows of textarea to 4 to make it less intimidating - Add height classes for 10em, 20em, and 30em to be used in other components - Add width classes for 30em and 40em to be used in other components - Add max-width classes for 30em and 36em to be used in other components - Add width classes for 200px, 1em, 10em, 30em, 40em, 50em, 100em, 200em, 0.5rem, 1rem, 4rem, 16rem, and 24rem to be used in other components - Add responsive width classes for full width on small, medium, and large screens

--- a/examples/promptrunner/styles/app.css
+++ b/examples/promptrunner/styles/app.css
@@ -70,6 +70,18 @@
   height: 600px;
 }
 
+.h-\[30em\] {
+  height: 30em;
+}
+
+.h-\[20em\] {
+  height: 20em;
+}
+
+.h-\[10em\] {
+  height: 10em;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -88,6 +100,74 @@
 
 .w-screen {
   width: 100vw;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-64 {
+  width: 16rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-1\/2 {
+  width: 50%;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[200em\] {
+  width: 200em;
+}
+
+.w-\[1em\] {
+  width: 1em;
+}
+
+.w-\[10em\] {
+  width: 10em;
+}
+
+.w-\[100em\] {
+  width: 100em;
+}
+
+.w-\[50em\] {
+  width: 50em;
+}
+
+.w-\[30em\] {
+  width: 30em;
+}
+
+.w-\[40em\] {
+  width: 40em;
+}
+
+.max-w-\[40em\] {
+  max-width: 40em;
+}
+
+.max-w-\[30em\] {
+  max-width: 30em;
+}
+
+.max-w-\[36em\] {
+  max-width: 36em;
 }
 
 .flex-grow {
@@ -325,6 +405,10 @@ h1 {
 }
 
 @media (min-width: 640px) {
+  .sm\:w-full {
+    width: 100%;
+  }
+
   .sm\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -332,7 +416,22 @@ h1 {
 }
 
 @media (min-width: 768px) {
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
   .md\:max-w-4xl {
     max-width: 56rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:w-full {
+    width: 100%;
   }
 }
